# passkeeper

./: .env.example  CMakeLists.txt  README.md  docker-compose.yml
qml/: Main.qml
schema/: schema.sql
src/: main.cpp
src/core/: AppContext.h
src/crypto/: CryptoProvider.cpp  CryptoProvider.h  PasswordGenerator.cpp  PasswordGenerator.h
src/database/: DatabaseManager.cpp  DatabaseManager.h
src/models/: Category.h  CryptoTypes.h  PasswordEntry.h
src/services/: AuthService.cpp  AuthService.h  CategoryService.cpp  CategoryService.h  ClipboardService.cpp  ClipboardService.h  EntryService.cpp  EntryService.h  ExportImportService.cpp  ExportImportService.h
src/ui/: QmlAppController.cpp  QmlAppController.h
src/utils/: DotEnv.cpp  DotEnv.h  Env.cpp  Env.h
